# lead_agent

./: README.md  pyproject.toml
output/: mid_automative_AI Agents and Apps_companies.json  mid_automative_AI Agents and Apps_contacts.json  mid_automative_AI Agents and Apps_emails.json
src/lead_agent/: crew.py  main.py
src/lead_agent/config/: agents.yaml  tasks.yaml
src/lead_agent/models/: outputs.py
src/lead_agent/tools/: hunter_io_tool.py  serper_tool.py
