[project]
name = "lead_agent"
version = "0.1.0"
description = "lead_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
    "pydantic>=2.11.5",
]

[project.scripts]
lead_agent = "lead_agent.main:run"
run_crew = "lead_agent.main:run"
train = "lead_agent.main:train"
replay = "lead_agent.main:replay"
test = "lead_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
